[package]
name = "contract"
version = "0.0.1"
authors = [ "coldiary",]
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.21.1"

[dependencies.elrond-wasm-node]
version = "0.21.1"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.21.1"
