[package]
name = "giveaway"
version = "0.0.1"
authors = ["Coldiary <coldiary@orange.fr>"]
edition = "2018"
publish = false

[lib]
path = "src/giveaway.rs"

[dependencies.elrond-wasm]
version = "0.30.0"
# path = "../../../elrond-wasm"

[dev-dependencies.elrond-wasm-debug]
version = "0.30.0"
# path = "../../../elrond-wasm-debug"
