[package]
name = "kickstart"
version = "0.0.0"
authors = ["Coldiary <coldiary@orange.fr>"]
edition = "2018"
publish = false

[lib]
path = "src/kickstart.rs"

[dependencies.elrond-wasm]
version = "0.23.0"
# path = "../../../elrond-wasm"

[dev-dependencies.elrond-wasm-debug]
version = "0.23.0"
# path = "../../../elrond-wasm-debug"
