[package]
name = "giveaway-meta"
version = "0.0.0"
authors = ["Coldiary <coldiary@orange.fr>"]
edition = "2018"
publish = false

[dependencies.giveaway]
path = ".."

[dependencies.elrond-wasm]
version = "0.29.3"
# path = "../../../../elrond-wasm"

[dependencies.elrond-wasm-debug]
version = "0.29.3"
# path = "../../../../elrond-wasm-debug"
